@page RN24 Release notes for PAPILO 2.4

@section RN243 PaPILO 2.4.3

Fixed bugs
----------

- Components: Find set representatives before unifying components
- Stuffing: Clear singleton columns for unique stuffings
- Trivial: Run trivial presolving in every round

Build system
------------


@section RN242 PaPILO 2.4.2

Fixed bugs
----------

- SCIP interface: Provide implied integrality when setting up component problem
- HiGHS interface: Enforce integrality of variables that are marked as both integral and implicit integral
- Gurobi interface: Declare implied integral variable with binary bounds to be binary

Build system
------------

- use CMake CONFIG mode for linking SoPlex, SCIP, and HiGHS

@section RN241 PaPILO 2.4.1

Fixed bugs
----------

- SparseStorage: Determine end pointers without behind last accesses

Build system
------------

- improved search for dependencies when another tool uses papilo-config.cmake
- updated the unit testing framework catch from 2.13.8 to 3.7.0
- link the executable via the Fortran compiler when clusol is used

@section RN240 PaPILO 2.4.0

Interface changes
-----------------

### Changed parameters

- presolve.abortfac = 0.00080000000000000004: abort factor of weighted number of reductions for exhaustive presolving
- presolve.lpabortfac = 0.01: abort factor of weighted number of reductions for exhaustive LP presolving

### New parameters with default values

- numerics.useabsfeas = 1: whether to use an absolute tolerance for feasibility checks
- presolve.abortfacfast = 0.00080000000000000004: abort factor of weighted number of reductions for fast presolving
- presolve.abortfacmedium = 0.00080000000000000004: abort factor of weighted number of reductions for medium presolving
- presolve.lpabortfacfast = 0.01: abort factor of weighted number of reductions for fast LP presolving
- presolve.lpabortfacmedium = 0.01: abort factor of weighted number of reductions for medium LP presolving

Build system
------------

- updated FindTBB